Start making Vacuum Chamber - it looks terrible rn, but will be improved over time

--- a/src/main/resources/assets/singularity/lang/en_us.json
+++ b/src/main/resources/assets/singularity/lang/en_us.json
@@ -1,3 +1,6 @@
 {
-  "block.singularity.fuel_cell": "Fuel Cell"
+  "block.singularity.fuel_cell": "Fuel Cell",
+  "block.singularity.vacuum_chamber": "Vacuum Chamber",
+
+  "creative_tab.singularity.name": "Wolfie's Singularity Reactor"
 }
