Add empty power module

--- a/src/main/resources/assets/singularity/lang/en_us.json
+++ b/src/main/resources/assets/singularity/lang/en_us.json
@@ -3,5 +3,7 @@
   "block.singularity.vacuum_chamber": "Vacuum Chamber",
   "block.singularity.electric_furnace": "Electric Furnace",
 
+  "item.singularity.empty_power_module": "Empty Power Module",
+
   "creative_tab.singularity.name": "Wolfie's Singularity Reactor"
 }
