--- a/src/main/resources/assets/singularity/lang/en_us.json
+++ b/src/main/resources/assets/singularity/lang/en_us.json
@@ -5,5 +5,9 @@
 
   "item.singularity.empty_power_module": "Empty Power Module",
 
-  "creative_tab.singularity.name": "Wolfie's Singularity Reactor"
+  "creative_tab.singularity.name": "Wolfie's Singularity Reactor",
+
+  "block.singularity.blast_furnace_controller": "Blast Furnace Controller",
+  "block.singularity.blast_furnace_brick": "Blast Furnace Brick",
+  "multiblock.singularity.blast_furnace": "Large Blast Furnace"
 }
